dx/force-app/main/default/objects/ltng_DependentPicklistBase__c/ltng_DependentPicklistBase__c.object-meta.xml
<CustomObject>
    <description>Base object for dependent picklist demo.</description>
    <label>Dependent Picklist Base</label>
    <nameField>
        <label>Dependent Picklist Base Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dependent Picklist Bases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>