dx/force-app/main/default/objects/ltng_DependentPicklistBase__c/fields/Level1__c.field-meta.xml
<CustomField>
    <fullName>Level1__c</fullName>
    <label>Level 1</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Level 1</fullName>
            </value>
            <value>
                <fullName>Valid Level 1</fullName>
            </value>
            <value>
                <fullName>Valid Level 1-A</fullName>
            </value>
            <value>
                <fullName>Valid Level 1-B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>