dx/force-app/main/default/objects/ltng_DependentPicklistBase__c/fields/Level2__c.field-meta.xml
<CustomField>
    <fullName>Level2__c</fullName>
    <label>Level 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Level1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Level 2</fullName>
            </value>
            <value>
                <fullName>Valid Level 2</fullName>
            </value>
            <value>
                <fullName>Valid Level 2-A</fullName>
            </value>
            <value>
                <fullName>Valid Level 2-B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>