dx/force-app/main/default/objects/ltng_DependentPicklistBase__c/fields/Level3__c.field-meta.xml
<CustomField>
    <fullName>Level3__c</fullName>
    <label>Level 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Level 3</fullName>
            </value>
            <value>
                <fullName>Valid Level 3</fullName>
            </value>
            <value>
                <fullName>Valid Level 3-A</fullName>
            </value>
            <value>
                <fullName>Valid Level 3-B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>