dx/force-app/main/default/objects/ltng_DependentPicklistBase__c/recordTypes/TypeA.recordType-meta.xml
<RecordType>
    <fullName>TypeA</fullName>
    <active>true</active>
    <label>Type A</label>
</RecordType>