dx/force-app/main/default/objects/ltng_DependentPicklistBase__c/recordTypes/TypeB.recordType-meta.xml
<RecordType>
    <fullName>TypeB</fullName>
    <active>true</active>
    <label>Type B</label>
</RecordType>